<resources>
    <string name="app_name">Red_v1</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">password</string>
    <string name="button_login">Login</string>
    <string name="text_signup">No account? Go to Signup</string>
    <string name="button_apply">Apply</string>
    <string name="button_signout">Signout</string>
    <string name="title_image_desc">App title logo</string>
    <string name="hint_username">Username</string>
    <string name="button_signup">Signup</string>
    <string name="text_login">Already have an account? Go to Login.</string>
    <string name="hint_search">Search</string>
    <string name="hint_red_text">What\'s up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="hint_local">Localname</string>
</resources>