<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

  <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fillViewport="true">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/title"
            android:layout_margin="@dimen/grid_2x"
            android:contentDescription="@string/title_image_desc"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/grid_2x">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/emailET"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="48dp"
              android:inputType="textEmailAddress"
              android:hint="@string/hint_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTIL"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/grid_2x">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="@dimen/standard_width"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordTIL"
            android:layout_centerHorizontal="true"
            style="@style/StandardButton"
            android:text="@string/button_login"
            android:layout_margin="@dimen/grid_2x"
            android:onClick="onLogin"/>

        <TextView
            android:id="@+id/signupTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/grid_2x"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/text_signup"
            style="@style/LinkText"
            android:onClick="goToSignup"
            android:minHeight="48dp"
            />




    </RelativeLayout>
  </androidx.core.widget.NestedScrollView>

  <LinearLayout
          android:id="@+id/loginProgressLayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:gravity="center"
          android:background="@color/transparent_gray"
          android:visibility="gone">

      <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

