<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid_3x"
            android:layout_marginBottom="@dimen/grid_3x"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/photoIV"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_marginBottom="@dimen/grid_2x"
                android:src="@drawable/default_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2x"
                android:layout_below="@id/photoIV">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2x"
                android:layout_below="@id/usernameTIL">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/baseTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2x"
                android:layout_below="@id/emailTIL">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/baseET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_local"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="50dp"
                android:layout_below="@id/baseTIL"
                android:layout_marginBottom="@dimen/grid_2x"
                android:onClick="onApply"
                android:text="@string/button_apply"
                style="@style/StandardButton"/>

            <Button
                android:id="@+id/signoutButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="50dp"
                android:layout_below="@id/applyButton"
                android:layout_marginBottom="@dimen/grid_2x"
                android:onClick="onSignout"
                android:text="@string/button_signout"
                style="@style/StandardButton"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/profileProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_gray"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/grid_3x"
        app:srcCompat="@drawable/find" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />




</androidx.constraintlayout.widget.ConstraintLayout>